H3CIPMSJAVA-20180830/src/objects/SKU__c.object
<CustomObject>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <label>Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SKU_Desc__c</fullName>
        <label>SKU Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SKU</label>
    <nameField>
        <label>SKU_Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>